# manga-organizer

./: README.md  README.zh-CN.md  minis-test.txt  pyproject.toml
Module/: minis-test.sgmodule
comic_organizer/: __init__.py  core.py
tests/: minis_permission_test.py
